--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,34 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    background-color: #ebecf0;
+    color: #787fa0;
+}
+
+@media screen and (min-width: 1201px) {
+    body {
+        font-size: 24px;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    body {
+        font-size: 20px;
+    }
+}
+
+@media screen and (max-width: 992px) {
+    body {
+        font-size: 18px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    body {
+        font-size: 16px;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    body {
+        font-size: 14px;
+    }
+}
